--- a/lovely-pets-client/src/Translations/ru/translation.json
+++ b/lovely-pets-client/src/Translations/ru/translation.json
@@ -1,11 +1,17 @@
 {
-    "title": "Welcome {{name}}, to react using react-i18next fully type-safe",
     "description": {
         "part1": "This is a simple example.",
         "part2": "😉"
     },
+    "bread_crumbs": {
+        "to_back": "Назад"
+    },
     "button": {
-        "cart": "В корзину"
+        "add_to_favourites": "В избранное",
+        "cart": "В корзину",
+        "remove_from_favourites": "Удалить из избранного",
+        "remove_product": "Удалить товар",
+        "write_a_review": "Написать отзыв"
     },
     "footer": {
         "in_contact": "Мы на связи",
@@ -56,6 +62,10 @@
         "cart": {
             "title": "Корзина"
         },
+        "details": {
+            "description": "Описание",
+            "reviews": "Отзывы"
+        },
         "favourites": {
             "title": "Избранное"
         },
@@ -67,6 +77,18 @@
                 "placeholder": "Поделитесь впечатлениями о товаре"
             },
             "submit_button": "Отправить отзыв"
+        }
+    },
+    "placeholder": {
+        "delivery": {
+            "title": "Доставка по всему Миру!",
+            "delivery_to_office": "Доставка в пункт выдачи",
+            "delivery_by_courier": "Доставка курьером",
+            "from": "от"
+        },
+        "quality": {
+            "title": "Гарантия качества",
+            "text": "Если Вам не понравилось качество нашей продукции, мы вернем деньги, либо сделаем все возможное, чтобы удовлетворить ваши нужды."
         }
     }
 }
