--- a/lovely-pets-client/src/Translations/ru/translation.json
+++ b/lovely-pets-client/src/Translations/ru/translation.json
@@ -7,6 +7,7 @@
         "to_back": "Назад"
     },
     "button": {
+        "add_cat": "Добавить котика",
         "add_to_favourites": "В избранное",
         "cart": "В корзину",
         "remove_from_favourites": "Удалить из избранного",
@@ -40,6 +41,19 @@
         "button": "На главную"
     },
     "pages": {
+        "add_product": {
+            "title": "Добавление нового товара",
+            "fields": {
+                "description": "Описание",
+                "discount": "Скидка",
+                "name": "Название товара",
+                "picture": "Добавьте фото",
+                "price": "Цена",
+                "stock": "Наличие",
+                "wight": "Вес"
+            },
+            "placeholder": "Укажите значение"
+        },
         "catalog": {
             "filter": {
                 "search": {
